examples/test/testpolicy5736.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5736
  namespace: namespace138
spec:
  podSelector:
    matchLabels:
      key19: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value21
          key28: value6
          key39: value32
      podSelector:
        matchLabels:
          key17: value39
